UI alignment fixed in partner report page.

--- a/src/app/partners/partner-reports/partner-reports.component.css
+++ b/src/app/partners/partner-reports/partner-reports.component.css
@@ -64,6 +64,9 @@
 	text-align: left;
 }
 
+.center{
+	text-align: center;
+}
   
   .blur {
 	-webkit-filter: blur(1px);
